# itmo-script

./: .gitignore  CMakeLists.txt  README.md  TODO.md  theory.md
examples/: fibonacci.is
src/: CMakeLists.txt
src/interpreter/: CMakeLists.txt  interpreter  interpreter.cpp  interpreter.h
src/interpreter/built_in/: CMakeLists.txt  built_in.cpp  built_in.h
src/interpreter/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
src/interpreter/memory/: CMakeLists.txt  memory.cpp  memory.h
src/interpreter/operators/: CMakeLists.txt  operators.cpp  operators.h
src/interpreter/parser/: CMakeLists.txt  parser.cpp  parser.h  serializer.cpp  visualizer.py
src/interpreter/parser/serializer/: serializer.cpp  serializer.h  visualizer.py
src/interpreter/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: CMakeLists.txt  ast_ut.cpp  function_test.cpp  lexer_ut.cpp  loop_and_branch_test.cpp  standart_library_ut.cpp  types_test.cpp
tests/operators/: CMakeLists.txt  binary_operators_ut.cpp  comparators_ut.cpp  slices_ut.cpp  unary_operators_ut.cpp
